--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -47,7 +47,13 @@ $underline: false !default;
     -moz-transition: all $s ease;
     -webkit-transition: all $s ease;
     -o-transition: all $s ease;
-    transition: all $s ease
+    transition: all $s ease;
+}
+@mixin transition($args...){
+    -moz-transition: $args;
+    -webkit-transition: $args;
+    -o-transition: $args;
+    transition: $args;
 }
 @mixin transform($t){
     -ms-transform: $t;
