--- a/source/platform/index.html.erb
+++ b/source/platform/index.html.erb
@@ -33,31 +33,31 @@ priority: "0.9"
     </div>
     <div class="row align-center">
         <div class="columns small-6 text-right">
-            <%= 
-            partial "partials/snippets/button", 
+            <%=
+            partial "partials/snippets/button",
                 :locals => {
-                    :label => "Explore capabilities", 
-                    :title => "Explore the capabilities of the Datica Platform", 
-                    :url => "/compliance", 
-                    # :rel => "external", 
-                    :button_classes => "button hollow", 
-                    # :icon => "icon-chevron-right", 
-                    # :icon_color => "white", 
+                    :label => "Explore capabilities",
+                    :title => "Explore the capabilities of the Datica Platform",
+                    :url => "/compliance",
+                    # :rel => "external",
+                    :button_classes => "button hollow",
+                    # :icon => "icon-chevron-right",
+                    # :icon_color => "white",
                     # :icon_align => "right"
                 }
             %>
         </div>
         <div class="columns small-6 text-left">
-            <%= 
-            partial "partials/snippets/button", 
+            <%=
+            partial "partials/snippets/button",
                 :locals => {
-                    :label => "View Pricing", 
-                    :title => "View Platform pricing", 
-                    :url => "/pricing", 
-                    # :rel => "external", 
-                    :button_classes => "button", 
-                    :icon => "icon-chevron-right", 
-                    :icon_color => "white", 
+                    :label => "View Pricing",
+                    :title => "View Platform pricing",
+                    :url => "/pricing",
+                    # :rel => "external",
+                    :button_classes => "button",
+                    :icon => "icon-chevron-right",
+                    :icon_color => "white",
                     :icon_align => "right"
                 }
             %>
@@ -101,16 +101,16 @@ priority: "0.9"
     <div class="row align-center">
         <% data.views.platform.tiers.each do |tier| %>
             <div class="columns medium-6">
-            <%= 
-            partial "partials/snippets/button", 
+            <%=
+            partial "partials/snippets/button",
                 :locals => {
-                    :label => tier.cta.label, 
-                    :title => tier.cta.label, 
-                    :url => tier.cta.url, 
-                    # :rel => "external", 
-                    :button_classes => tier.cta.classes, 
-                    :icon => "icon-chevron-right", 
-                    :icon_color => "white", 
+                    :label => tier.cta.label,
+                    :title => tier.cta.label,
+                    :url => tier.cta.url,
+                    # :rel => "external",
+                    :button_classes => tier.cta.classes,
+                    :icon => "icon-chevron-right",
+                    :icon_color => "white",
                     :icon_align => "right"
                 }
             %>
@@ -132,18 +132,18 @@ priority: "0.9"
             </ul>
         </div>
         <div class="columns small-12 medium-6 large-6">
-            <%= 
-            partial "partials/snippets/button", 
+            <%=
+            partial "partials/snippets/button",
                 :locals => {
-                    :label => "Explore Datica on AWS", 
-                    :title => "Explore Datica on AWS", 
+                    :label => "Explore Datica on AWS",
+                    :title => "Explore Datica on AWS",
                     :url => "/discover/aws-hipaa",
-                    :button_classes => "button button--light group", 
-                    :icon => "icon-chevron-right", 
-                    :icon_color => "black", 
+                    :button_classes => "button button--light group",
+                    :icon => "icon-chevron-right",
+                    :icon_color => "black",
                     :icon_align => "right"
                 }
-            %>  
+            %>
         </div>
     </div>
 
@@ -162,7 +162,70 @@ priority: "0.9"
         </div>
     </div>
 </section>
-<section class="section-article container-color--gray-dark-grad-mono-noise">
+<section id="tech-hcms" class="section-article container-color--gray-dark-grad-mono-noise">
+    <div class="row align-center">
+        <div class="columns small-12">
+            <div class="callout callout--large callout--gray-light">
+                <div class="row align-center">
+                    <div class="columns small-12 text-center group">
+                        <h2 class="headline-4 spaced-out">How Customers Use the Datica Platform</h2>
+                    </div>
+                </div>
+                <div class="row align-center">
+                    <div class="columns small-12 text-center group">
+                        <h2 class="headline-3 nomargin">Building On The Platform</h2>
+                        <!-- <p class="lead">See how developers use the Datica platform to build compliant applications</p> -->
+                    </div>
+                </div>
+                <div class="row align-center align-bottom">
+                    <% data.views.platform.platform_use.each do | step | %>
+                        <div class="columns small-12 medium-4">
+                            <img class="pad" src="<%= step.image %>?w=500" alt="<%= step.title %>">
+                        </div>
+                    <% end %>
+                </div>
+                <div class="row align-center group">
+                    <% data.views.platform.platform_use.each do | step | %>
+                        <div class="columns small-12 medium-4">
+                            <h4 class="headline-5"><%= step.title %></h4>
+                            <p><%= step.desc %></p>
+                            <%=
+                            partial "partials/snippets/button",
+                                :locals => {
+                                    :label => step.button.label,
+                                    :title => step.button.label,
+                                    :url => step.button.url,
+                                    # :rel => "external",
+                                    :button_classes => "button small secondary",
+                                    :icon => "icon-chevron-right",
+                                    :icon_color => "white",
+                                    :icon_align => "right"
+                                }
+                            %>
+                        </div>
+                    <% end %>
+                </div>
+
+                <div class="row align-center">
+                    <div class="columns small-12 text-center group">
+                        <h2 class="headline-3 nomargin">Healthcare Compliance Management System</h2>
+                        <!-- <p class="lead"></p> -->
+                    </div>
+                </div>
+                <div class="row align-center">
+                    <div class="columns small-12 medium-6 large-7">
+                        <img src="https://images.contentful.com/189dvqdsjh46/3wzJLEqLHqs4kC2cAk4Msq/1131a6ae3d921e934fa8effa21802b35/hcms-dashboard.png?w=1200" alt="HCMS Dashboard">
+                    </div>
+                    <div class="columns small-12 medium-6 large-4">
+                        <p>Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across all customer environments.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- <section class="section-article container-color--gray-dark-grad-mono-noise">
     <div class="row align-center">
         <div class="columns small-12 medium-8 text-center section--header-dark-group">
             <h3 class="headline-3">Compliance ownership is a liability, not an asset. Don't shoulder that risk by yourself.</h3>
@@ -209,7 +272,7 @@ priority: "0.9"
             </table>
         </div>
     </div>
-</section>
+</section> -->
 <section class="section-article container-color--gray-light">
     <div class="row group">
         <div class="column text-center">
