--- a/source/platform/technology.html.erb
+++ b/source/platform/technology.html.erb
@@ -13,39 +13,6 @@ priority: "0.9"
 collectionName: "platform"
 collectionOrder: 2
 ctaCustom: true
-content_lead: |
-    AWS and Azure provide VPCs, which cover a portion of compliance and security requirements.
-
-    Within a VPC, the Datica Platform is installed. Everything within the Platform is strictly managed in adherence to Datica policies. The Platform uses a combination of Kubernetes and proprietary technology to orchestrate all DevOps duties for customers.
-
-    Customers create an account within the Datica Platform. It is through the account that they gain access to HIPAA-eligible AWS Primitives or Azure Services, which are strictly controlled by the Platform.
-
-    Within a customer account, the Platform containerizes all technology required to meet compliance controls from HIPAA, HITRUST, GDPR, and GxP. Things like logging, intrusion detection, and penetration testing, to name a few.
-
-    Customers deploy their applications to containerized environments. They can have multiple environments within their Datica account, managing any type of technical use case.
-
-    Administration of AWS Primitives or Azure Services are no longer required. Instead, customers simply allocate RAM to individual containers. Datica takes care of the rest.
-
-    Deployment is done either through a `git push` buildpack-based process or by pushing custom Docker containers.
-content_mirth: |
-    Add a new environment to your account with the click of a button. OCI Mirth Connect is a pre-packaged configuration of all the open source integration tooling you need to integrate with EHRs.
-    {: .lead}
-
-    The add-on includes:
-
-    * Mirth configured to be highly-available
-    * Load balancers
-    * Redundant Postgres for initial data ingestion
-    * Mirth alerting and monitoring
-    * VPN management
-
-    We open sourced our Mirth HL7 transformations used over the past three years. With OCI Mirth, you can get started today using these tools. Or, should you require help integrating into a specific hospital, we offer professional services to project manage an integration to completion.
-content_sansoro: |
-    Sansoro Health Emissary(R)
-    Emissary is an elegant approach to data interoperability that is unique and proven.
-    {: .lead}
-
-    Customers can choose to deploy Emissary as a new environment into their Datica Platform account. Datica will manage the infrastructure compliance and security, while Sansoro is available to support the Emissary product experience itself.
 ---
 <aside class="hide-for-large pad--sm container-color--blue-alt">
     <div class="row align-middle align-center">
@@ -71,7 +38,7 @@ content_sansoro: |
                 <img data-interchange="[https://images.contentful.com/189dvqdsjh46/4qOeISMqXeUQwIAWme4GGC/6667c65343bff05cfaf8d65ebdf588eb/shared-responsibilty-diagram-2018.png, small]" alt="Shared Responsibility Model">
             </div>
             <div class="columns small-12 large-6">
-                <%= Kramdown::Document.new(current_page.data.content_lead).to_html %>
+                <%= Kramdown::Document.new(data.views.platform.tech_content.lead).to_html %>
             </div>
         </div>
     </section>
@@ -128,7 +95,7 @@ content_sansoro: |
     <div class="row align-center">
         <div class="columns small-12 large-6">
             <h3 class="headline-4 text-center">One-click-install Mirth Connect</h3>
-            <%= Kramdown::Document.new(current_page.data.content_mirth).to_html %>
+            <%= Kramdown::Document.new(data.views.platform.tech_content.mirth).to_html %>
             <%=
             partial "partials/snippets/button",
                 :locals => {
@@ -148,7 +115,7 @@ content_sansoro: |
     <div class="row align-center">
         <div class="columns small-12 large-6">
             <h3 class="headline-4 text-center">Sansoro Health Emissary &reg;</h3>
-            <%= Kramdown::Document.new(current_page.data.content_sansoro).to_html %>
+            <%= Kramdown::Document.new(data.views.platform.tech_content.sansoro).to_html %>
             <%=
             partial "partials/snippets/button",
                 :locals => {
