--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -43,7 +43,7 @@ $underline: false !default;
      -moz-border-radius: ($r);
      border-radius: ($r);
 }
-@mixin easing($s){
+@mixin easing($s){ // keeping this for legacy uses for now. Should use the one below, with transform3D
     -moz-transition: all $s ease;
     -webkit-transition: all $s ease;
     -o-transition: all $s ease;
