restoring nav scss module,

--- a/source/assets/scss/seldon.scss
+++ b/source/assets/scss/seldon.scss
@@ -63,7 +63,7 @@
 @import 'modules/utility';
 @import 'modules/containers';
 // @import 'modules/ui';
-// @import 'modules/nav';
+@import 'modules/nav';
 // @import 'modules/footer';
 @import 'modules/links';
 @import 'modules/type';
