Content work, compliance page.

--- a/source/platform/compliance.html.erb
+++ b/source/platform/compliance.html.erb
@@ -122,7 +122,7 @@ priority: "0.9"
             <img class="img-crisp" data-interchange="[https://images.contentful.com/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png?w=640, small], [https://images.contentful.com/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png, medium]" alt="platform-controls-diagram">
             <hr class="divider">
         </div>
-    </div>
+    </div>  
 
     <div class="row align-center">
         <div class="columns small-12 large-4">
@@ -140,6 +140,24 @@ priority: "0.9"
     </div>
 </section>
 
+<section class="section-article">
+    <div class="row group align-center">
+        <div class="columns small-12 text-center">
+            <h2 class="headline-3">General Data Protection Regulation</h2>
+            <p class="lead">Datica is ready for GDPR on May 25th.</p>
+        </div>
+    </div>
+    <div class="row align-center align-middle">
+        <div class="columns small-12 medium-6 large-4">
+            <img src="https://images.contentful.com/189dvqdsjh46/6L09pVF6a4uAY00QMqSOYg/a99648672cbc3279925bf2fa7e146fd6/gdpr-ready-badge-text.png" alt="GDPR Ready">
+        </div>
+        <div class="columns small-12 medium-6 large-6">
+            <p>The European Union has created a new authoritative regulation on consumer data called GDPR. Fines start being handed out on May 25th, 2018. The regulation applies to all EU citizens regardless of service or where the data lives. Protected Health Information (PHI) is scoped within GDPR, so any healthcare organization who might service European Union citizens will be affected by it.</p>
+            <p>Are you ready? Datica has gone through the necessary audits to ensure it is compliant with the regulation.</p>
+            <%= partial "partials/cards/discover", :locals => { :post => data.site.discover["6yNMzCKn84Q4qIsm0sWmUy"], :classes => "" } %>
+        </div>
+    </div>
+</section>
 <section class="section-article container-color--gray-dark-grad text-center">
     <div class="row align-center">
         <div class="columns small-12 medium-8">
