more AWS content. Really like how combining slim with inline markdown (not easy with erb) speeds mockups.

--- a/source/platform/aws.html.slim
+++ b/source/platform/aws.html.slim
@@ -73,11 +73,39 @@ section.section-article(id="platform-benefits-1")
         .columns.small-12.medium-10.large-8.text-center.group
             h2.headline-3.nomargin No matter your implementation, the Platform delivers the same assurances
             p.lead Hosted and Licensed options solve compliance exactly the same way
+    .row.align-center
+        .columns.small-12.medium-10.large-6
+            markdown:
+                #### Datica + AWS in a nutshell
+                {: .headline-4}
+
+                We turn "HIPAA Eligible" AWS Primitives into HIPAA compliant, GDPR compliant, GxP compliant, and HITRUST certified workloads.
+
+                That Platform combines the following AWS Primitives to achieve continuous workload deployment:
+                EC2 • EBS • S3 • ...
+
+                #### Using other AWS Primitives outside of the Datica Platform
+
+                #### How users scale resources on the Platform
+
 section.section-article(id="platform-benefits-2")
     .row.align-center
         .columns.small-12.medium-10.large-8.text-center.group
             h2.headline-3.nomargin Pricing is predictable
             p.lead Pay monthly or annual subscriptions to the Platform with pass-through pricing on all physical AWS resources, like RAM and EBS.
+    .row.align-center
+        .columns.small-12.medium-10.large-6
+            markdown:
+                #### Hosted customers pay a monthly subscription based on the number of environments deployed.
+                {: .headline-4}
+
+                This is an environment: asdfasdfasfasdfadf
+
+                #### Licensed customers pay an annual subscription which is all-inclusive for usage.
+
+                Just a single-rate, annual subscription that covers all environments you may deploy.
+
+                #### Support and other add-ons are additional costs per subscription.
 section.section-article(id="platform-benefits-3")
     .row.align-center
         .columns.small-12.medium-10.large-8.text-center.group
