--- a/source/platform/technology.html.erb
+++ b/source/platform/technology.html.erb
@@ -17,7 +17,7 @@ ctaCustom: true
 <aside class="hide-for-large pad--sm container-color--blue-alt">
     <div class="row align-middle align-center">
         <div class="columns small-6 medium-4">
-            <a href="/platform/integration" title="Learn about integrations" class="button hollow--inverted expanded small nomargin">Integrations <i class="fa fa-angle-right"></i></a>
+            <a href="/platform/compliance" title="Learn about integrations" class="button hollow--inverted expanded small nomargin">Integrations <i class="fa fa-angle-right"></i></a>
         </div>
         <div class="columns small-6 medium-4">
             <a href="/pricing" title="sign up" class="button button--light expanded small nomargin">Pricing <i class="fa fa-icon fa-angle-right"></i></a>
