--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -109,7 +109,7 @@
 .sticky {
     // .is-[state] classes for control over its appearance and exit if needed. Desktop only
     @include breakpoint (large) {
-        transition: box-shadow 200ms linear, background-color .3s linear;
+        transition: box-shadow $timing-default linear, background-color .3s linear;
         // background-color: $gray-11;
         @include shadow(1px, 1px, $black, 0.90);
         // opacity: 0;
@@ -120,15 +120,27 @@
             // opacity: 1;
             background-color: $gray-12;
             @include shadow(4px, 4px, $black, 0.85);
+            .menu-item--logo { // subnav logo item
+                opacity: 1;
+            }
         }
     }
     .menu {
         $bar: rem-calc(2px);
         &-item {
+            &:first-child a {
+                padding-right: 0; // puts logo flush with next item.
+                padding-bottom: 0;
+            }
+            &--logo {
+                @include transition(opacity $timing-default);
+                opacity: 0;
+                height: rem-calc(29px); // must fit within nav space, and align with other li items
+            }
             &--link {
                 color: $color_talk;
                 &:hover {
-                    transition: all 200ms linear;
+                    transition: all $timing-default linear;
                     background-color: white(0);
                     border-bottom: $bar solid $color_prime-alt;
                 }
