--- a/source/platform/_nav-platform.html.erb
+++ b/source/platform/_nav-platform.html.erb
@@ -1,3 +1,8 @@
+<li class="menu-item">
+	<a href="/" title="Datica Home">
+		<%= inline_svg("icon-datica", class: "menu-item--logo svg-color--black") %>
+	</a>
+</li>
 <% ordered_pages = sitemap.resources.select{|p| p.data.collectionName == "platform" }.sort_by{ |page| page.data.collectionOrder } %>
 <% ordered_pages.each do |page| %>
     <li class="menu-item">
